k8s/clinic-api/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clinic-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: clinic-selector
  template:
    metadata:
      labels:
        app: clinic-selector
    spec:
      containers:
        - name: clinic-api
          ports:
            - containerPort: 8080
          image: mauriciocarvalhoac/clinic-api:1.0.0
          imagePullPolicy: Always
