k8s/clinic-api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-clinic
spec:
  type: ClusterIP
  selector:
    app: clinic-selector
  ports:
    - port: 80
      targetPort: 8080
